# geniusai-search-mcp

./: .gitignore  Makefile  pyproject.toml  run.sh
config/: claude-desktop-config.json
src/: config.py  geniusai_client.py  server.py
tests/: test_geniusai_client.py  test_server.py
